--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Wayne Stely Lamansiang | Portfolio</title>
+    <meta name="description" content="Portfolio of Wayne Stely Lamansiang - Software Engineering Enthusiast" />
+    <meta name="author" content="Wayne Stely Lamansiang" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Wayne Stely Lamansiang | Portfolio" />
+    <meta property="og:description" content="Software Engineering Enthusiast Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Wayne Stely Lamansiang | Portfolio" />
+    <meta name="twitter:description" content="Software Engineering Enthusiast Portfolio" />
   </head>
 
   <body>
